# computer-vision-cpp

./: .gitignore  CMakeLists.txt  README.md  cnr
assets/: IBM Logo.ch8_code  test_opcode.ch8_code
assets/fonts/: OFL.txt
src/: constants.hpp  engine.hpp  gl.hpp  global.hpp  globals.hpp  image.cpp  image.hpp  input.hpp  log.hpp  main.cpp  render.hpp  texture_image.cpp  texture_image.hpp  types.hpp  utils.hpp
